--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 王雷雷的博客
 email: doubleray.wang@gmail.com
 author: DoubleRay Wang
 url: http://doubleray.win
-resume_site: https://wangleileiwangleilei.github.io/resume/
+resume_site: /resume
 github: https://github.com/DoubleRayWang/
 baseurl: ""
 description: 看护好自己曾经的激情与理想，在这个怀疑的年代，依然需要信仰。
