--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-name: 王雷雷的博客
+name: DoubleRay`Blog
 email: doubleray.wang@gmail.com
 author: DoubleRay Wang
 url: http://doubleray.win
